--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.spc</groupId>
     <artifactId>uiptv</artifactId>
-    <version>0.0.8-SNAPSHOT</version>
+    <version>0.1.2</version>
     <name>UIPTV</name>
 
     <properties>
