--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -142,5 +142,5 @@ jobs:
           tag_name: ${{ github.ref_name }}
           name: Release ${{ github.ref_name }}
           generate_release_notes: true
-          overwrite_files: true
+          fail_on_unmatched_files: true
           files: artifacts/*/*
