--- a/pom.xml
+++ b/pom.xml
@@ -37,10 +37,11 @@
             <artifactId>slf4j-api</artifactId>
             <version>2.0.17</version>
         </dependency>
+        <!-- SLF4J Simple binding for logging output -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>2.0.17</version>
+            <version>2.0.17</version> <!-- Use a recent version compatible with your SLF4J API -->
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -253,6 +254,7 @@
         </plugins>
     </build>
     <profiles>
+        <!-- Windows Profiles -->
         <profile>
             <id>windows-x86_64</id>
             <properties>
@@ -274,7 +276,6 @@
                         </executions>
                         <configuration>
                             <name>UIPTV</name>
-                            <type>APP_IMAGE</type>
                             <vendor>SPC</vendor>
                             <copyright>Copyright © 2024 SPC</copyright>
                             <input>${project.build.directory}/jpackage-app</input>
@@ -314,7 +315,6 @@
                         </executions>
                         <configuration>
                             <name>UIPTV</name>
-                            <type>APP_IMAGE</type>
                             <vendor>SPC</vendor>
                             <copyright>Copyright © 2024 SPC</copyright>
                             <input>${project.build.directory}/jpackage-app</input>
@@ -334,6 +334,7 @@
             </build>
         </profile>
 
+        <!-- macOS Profiles -->
         <profile>
             <id>mac-x86_64</id>
             <properties>
@@ -387,10 +388,14 @@
                                         <property name="dmg.path" value="${project.build.directory}/dist/${dmg.name}"/>
 
                                         <echo message="1. Swapping JPackage binary and config..."/>
+
                                         <move file="${macos.dir}/UIPTV" tofile="${macos.dir}/UIPTV_binary"/>
+
                                         <move file="${config.dir}/UIPTV.cfg" tofile="${config.dir}/UIPTV_binary.cfg"/>
+
                                         <copy file="${project.basedir}/src/main/resources/mac/binary/UIPTV"
                                               tofile="${macos.dir}/UIPTV"/>
+
                                         <chmod file="${macos.dir}/UIPTV" perm="755"/>
 
                                         <echo message="5. Re-signing the Application..."/>
@@ -481,10 +486,14 @@
                                         <property name="dmg.path" value="${project.build.directory}/dist/${dmg.name}"/>
 
                                         <echo message="1. Swapping JPackage binary and config..."/>
+
                                         <move file="${macos.dir}/UIPTV" tofile="${macos.dir}/UIPTV_binary"/>
+
                                         <move file="${config.dir}/UIPTV.cfg" tofile="${config.dir}/UIPTV_binary.cfg"/>
+
                                         <copy file="${project.basedir}/src/main/resources/mac/binary/UIPTV"
                                               tofile="${macos.dir}/UIPTV"/>
+
                                         <chmod file="${macos.dir}/UIPTV" perm="755"/>
 
                                         <echo message="5. Re-signing the Application..."/>
@@ -523,6 +532,7 @@
             </build>
         </profile>
 
+        <!-- Linux OS/Arch Profiles -->
         <profile>
             <id>linux-x86_64</id>
             <properties>
@@ -536,6 +546,7 @@
             </properties>
         </profile>
 
+        <!-- Linux Packaging Profiles -->
         <profile>
             <id>pkg-deb</id>
             <build>
