--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,6 @@ jobs:
         include:
           - arch: x86_64
             profile: windows-x86_64
-          # - arch: aarch64
-          #   profile: windows-aarch64
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
@@ -32,15 +30,11 @@ jobs:
       - name: Build Windows package
         run: mvn -B clean package -P ${{ matrix.profile }}
 
-      - name: Zip Windows App Image
-        # This zips the output folder so it can be uploaded as a single file
-        run: Compress-Archive -Path target/dist/UIPTV -DestinationPath target/dist/UIPTV-windows-${{ matrix.arch }}.zip
-
       - name: Upload Windows artifact
         uses: actions/upload-artifact@v4
         with:
           name: UIPTV-windows-${{ matrix.arch }}
-          path: target/dist/*.zip
+          path: target/dist/*
 
 
   build_mac:
@@ -70,17 +64,11 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: UIPTV-macos-${{ matrix.arch }}
-          # Uploads the .dmg file created by the antrun script
-          path: target/dist/*.dmg
+          path: target/dist/*
 
 
   build_linux:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - arch: x86_64
-            profile: linux-x86_64
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
@@ -92,77 +80,38 @@ jobs:
           java-version: '25'
           cache: maven
 
-      - name: Install RPM tools and Zip
-        run: sudo apt-get update && sudo apt-get install -y rpm zip
+      - name: Install RPM tools
+        run: sudo apt-get update && sudo apt-get install -y rpm
 
-      # 1. Build DEB
       - name: Build DEB package
-        run: mvn -B clean package -P ${{ matrix.profile }},pkg-deb
+        run: mvn -B clean package -P linux-x86_64,pkg-deb
 
       - name: Upload DEB artifact
         uses: actions/upload-artifact@v4
         with:
-          name: UIPTV-linux-${{ matrix.arch }}-deb
-          path: target/dist/*.deb
+          name: UIPTV-linux-x86_64-deb
+          path: target/dist/*
 
       - name: Clean dist directory
         run: rm -rf target/dist/*
 
-      # 2. Build RPM
       - name: Build RPM package
-        run: mvn -B clean package -P ${{ matrix.profile }},pkg-rpm
+        run: mvn -B clean package -P linux-x86_64,pkg-rpm
 
       - name: Upload RPM artifact
         uses: actions/upload-artifact@v4
         with:
-          name: UIPTV-linux-${{ matrix.arch }}-rpm
-          path: target/dist/*.rpm
+          name: UIPTV-linux-x86_64-rpm
+          path: target/dist/*
 
       - name: Clean dist directory
         run: rm -rf target/dist/*
 
-      # 3. Build AppImage (Portable Zip)
       - name: Build AppImage package
-        run: mvn -B clean package -P ${{ matrix.profile }},pkg-app-image
-
-      - name: Zip Linux App Image
-        run: |
-          cd target/dist
-          zip -r UIPTV-linux-${{ matrix.arch }}-portable.zip UIPTV-app-image
+        run: mvn -B clean package -P linux-x86_64,pkg-app-image
 
       - name: Upload AppImage artifact
         uses: actions/upload-artifact@v4
         with:
-          name: UIPTV-linux-${{ matrix.arch }}-portable
-          path: target/dist/*.zip
-
-
-  release:
-    runs-on: ubuntu-latest
-    needs:
-      - build_windows
-      - build_mac
-      - build_linux
-    if: startsWith(github.ref, 'refs/tags/')
-    permissions:
-      contents: write
-
-    steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-          merge-multiple: true
-
-      - name: Display structure of downloaded files
-        run: ls -R artifacts
-
-      - name: Create GitHub Release and upload assets
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ github.ref_name }}
-          name: Release ${{ github.ref_name }}
-          generate_release_notes: true
-          fail_on_unmatched_files: true
-          # Uploads every file found in the artifacts folder
-          files: artifacts/**
+          name: UIPTV-linux-x86_64-app-image
+          path: target/dist/*
