--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,6 @@
         <maven.compiler.source>25</maven.compiler.source>
         <maven.compiler.target>25</maven.compiler.target>
         <maven.compiler.release>25</maven.compiler.release>
-        <jpackage.version>1.0.8</jpackage.version>
         <vlcj.version>4.12.1</vlcj.version>
         <lombok.version>1.18.42</lombok.version>
         <!--        <javafx.platform>mac-aarch64</javafx.platform>-->
@@ -283,7 +282,7 @@
                             <mainJar>UIPTV.jar</mainJar>
                             <destination>target/dist</destination>
                             <icon>src/main/resources/icon.ico</icon>
-                            <appVersion>${jpackage.version}</appVersion>
+                            <appVersion>${version}</appVersion>
                             <javaOptions>
                                 <option>-Duser.dir=$APPDIR</option>
                             </javaOptions>
@@ -322,7 +321,7 @@
                             <mainJar>UIPTV.jar</mainJar>
                             <destination>target/dist</destination>
                             <icon>src/main/resources/icon.ico</icon>
-                            <appVersion>${jpackage.version}</appVersion>
+                            <appVersion>${version}</appVersion>
                             <javaOptions>
                                 <option>-Duser.dir=$APPDIR</option>
                             </javaOptions>
@@ -362,7 +361,7 @@
                             <mainJar>UIPTV.jar</mainJar>
                             <destination>target/dist</destination>
                             <icon>src/main/resources/icon.icns</icon>
-                            <appVersion>${jpackage.version}</appVersion>
+                            <appVersion>${version}</appVersion>
                             <javaOptions>
                                 <option>-Duser.dir=$APPDIR</option>
                                 <option>-Xdock:name=UIPTV</option>
@@ -460,7 +459,7 @@
                             <mainJar>UIPTV.jar</mainJar>
                             <destination>target/dist</destination>
                             <icon>src/main/resources/icon.icns</icon>
-                            <appVersion>${jpackage.version}</appVersion>
+                            <appVersion>${version}</appVersion>
                             <javaOptions>
                                 <option>-Duser.dir=$APPDIR</option>
                                 <option>-Xdock:name=UIPTV</option>
@@ -576,7 +575,7 @@
                             <linuxShortcut>true</linuxShortcut>
                             <linuxPackageName>uiptv</linuxPackageName>
                             <linuxMenuGroup>Video</linuxMenuGroup>
-                            <appVersion>${jpackage.version}</appVersion>
+                            <appVersion>${version}</appVersion>
                             <javaOptions>
                                 <option>-Duser.dir=$APPDIR</option>
                             </javaOptions>
@@ -616,7 +615,7 @@
                             <linuxShortcut>true</linuxShortcut>
                             <linuxPackageName>uiptv</linuxPackageName>
                             <linuxMenuGroup>Video</linuxMenuGroup>
-                            <appVersion>${jpackage.version}</appVersion>
+                            <appVersion>${version}</appVersion>
                             <javaOptions>
                                 <option>-Duser.dir=$APPDIR</option>
                             </javaOptions>
@@ -653,7 +652,7 @@
                             <mainJar>UIPTV.jar</mainJar>
                             <destination>target/dist</destination>
                             <icon>src/main/resources/icon.png</icon>
-                            <appVersion>${jpackage.version}</appVersion>
+                            <appVersion>${version}</appVersion>
                             <javaOptions>
                                 <option>-Duser.dir=$APPDIR</option>
                             </javaOptions>
