linux app indicator/icon fix attempt

--- a/pom.xml
+++ b/pom.xml
@@ -578,7 +578,6 @@
                             <appVersion>${version}</appVersion>
                             <javaOptions>
                                 <option>-Duser.dir=$APPDIR</option>
-                                <option>-Dawt.toolkit.name=UIPTV</option>
                             </javaOptions>
                             <linuxAppCategory>Video;AudioVideo;Player;</linuxAppCategory>
                             <resourceDir>${project.basedir}/src/main/resources/jpackage/linux</resourceDir>
@@ -619,7 +618,6 @@
                             <appVersion>${version}</appVersion>
                             <javaOptions>
                                 <option>-Duser.dir=$APPDIR</option>
-                                <option>-Dawt.toolkit.name=UIPTV</option>
                             </javaOptions>
                             <linuxAppCategory>Video;AudioVideo;Player;</linuxAppCategory>
                             <resourceDir>${project.basedir}/src/main/resources/jpackage/linux</resourceDir>
@@ -657,8 +655,8 @@
                             <appVersion>${version}</appVersion>
                             <javaOptions>
                                 <option>-Duser.dir=$APPDIR</option>
-                                <option>-Dawt.toolkit.name=UIPTV</option>
                             </javaOptions>
+                            <resourceDir>${project.basedir}/src/main/resources/jpackage/linux</resourceDir>
                         </configuration>
                     </plugin>
                 </plugins>
