now users can select local and remote m3us and publish/download one concatenated m3u or m3u8 file that can be used to a player working remotely. example url: http://localhost:port/iptv.m3u

--- a/pom.xml
+++ b/pom.xml
@@ -361,7 +361,7 @@
                             <mainJar>UIPTV.jar</mainJar>
                             <destination>target/dist</destination>
                             <icon>src/main/resources/icon.icns</icon>
-                            <appVersion>${version}</appVersion>
+                            <appVersion>1.0.0</appVersion> <!-- macOS requires version starting with non-zero -->
                             <javaOptions>
                                 <option>-Duser.dir=$APPDIR</option>
                                 <option>-Xdock:name=UIPTV</option>
@@ -459,7 +459,7 @@
                             <mainJar>UIPTV.jar</mainJar>
                             <destination>target/dist</destination>
                             <icon>src/main/resources/icon.icns</icon>
-                            <appVersion>${version}</appVersion>
+                            <appVersion>1.0.0</appVersion> <!-- macOS requires version starting with non-zero -->
                             <javaOptions>
                                 <option>-Duser.dir=$APPDIR</option>
                                 <option>-Xdock:name=UIPTV</option>
