--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <!--        <javafx.platform>mac-aarch64</javafx.platform>-->
         <!--        <javafx.platform>win</javafx.platform>-->
         <javafx.platform>linux</javafx.platform>
+        <frontend-maven-plugin.version>1.15.1</frontend-maven-plugin.version>
     </properties>
 
     <dependencies>
@@ -244,6 +245,47 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>com.github.eirslett</groupId>
+                <artifactId>frontend-maven-plugin</artifactId>
+                <version>${frontend-maven-plugin.version}</version>
+                <configuration>
+                    <workingDirectory>${basedir}/web</workingDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>install-node-and-npm</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>install-node-and-npm</goal>
+                        </goals>
+                        <configuration>
+                            <nodeVersion>v22.18.0</nodeVersion>
+                            <npmVersion>10.9.3</npmVersion>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>npm-install-web-build-tools</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>install --no-audit --no-fund</arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>build-minified-obfuscated-web-assets</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>run build:web</arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>3.4.0</version>
@@ -259,7 +301,7 @@
                             <resources>
                                 <resource>
                                     <targetPath>${basedir}/target/web</targetPath>
-                                    <directory>${basedir}/web</directory>
+                                    <directory>${basedir}/web/dist</directory>
                                     <filtering>false</filtering>
                                 </resource>
                             </resources>
@@ -276,7 +318,7 @@
                             <outputDirectory>${project.build.directory}/jpackage-app/web</outputDirectory>
                             <resources>
                                 <resource>
-                                    <directory>${basedir}/web</directory>
+                                    <directory>${basedir}/web/dist</directory>
                                 </resource>
                             </resources>
                         </configuration>
